--- a/_notebooks/2023-04-25-P4Y-SASSGuide.ipynb
+++ b/_notebooks/2023-04-25-P4Y-SASSGuide.ipynb
@@ -53,8 +53,9 @@
     "\n",
     "## Hacks Part 1\n",
     "1. Add your own element to your own repository to make it unique (0.9)\n",
-    "> I added an image to my fastpage and also changed the background color and text color to blue and white. I also made the border grey when it was previously green. \n",
-    "![image](https://user-images.githubusercontent.com/111464920/234402206-f19ec8a3-b31f-4358-a2b0-1df9920fb679.png)\n",
+    "\n",
+    "I made the background of my fastpages blue; the test is green and yellow, and I made the sidebar orange.\n",
+    "![image](https://user-images.githubusercontent.com/111464920/234405629-c8fd8733-98c1-4691-9c1b-06fbd82bc618.png)\n",
     "\n",
     "\n",
     "## Hacks Part 2\n",
