--- a/_notebooks/2023-04-25-P4Y-SASSGuide.ipynb
+++ b/_notebooks/2023-04-25-P4Y-SASSGuide.ipynb
@@ -61,11 +61,22 @@
     "## Hacks Part 2\n",
     "1. Add the style change button to your own github page (0.9)\n",
     "    - Change the button to your own styles \n",
+    "    ![image](https://user-images.githubusercontent.com/111464920/235037324-cf995dc2-4d52-4311-9a5d-e44c09ae16e2.png)\n",
+    "        \n",
+    "        I created a style button that changes into three different styles. \n",
+    "\n",
     "    - See if you can let make it change to multiple different styles (we understand that it is hard to create multiple distinct styles so you are only required to make it clear you have at least three different styles at can be changed)\n",
+    "        ![image](https://user-images.githubusercontent.com/111464920/235037763-f2ac22c6-df57-4925-80c2-534a17f9a3dd.png)\n",
+    "        ![image](https://user-images.githubusercontent.com/111464920/235037907-39f0fca9-8189-479b-8963-5330a868441c.png)\n",
+    "        ![image](https://user-images.githubusercontent.com/111464920/235038239-1890fb6f-f2fa-428e-a5f7-aff1f705f014.png)\n",
+    "\n",
+    "\n",
     "2. Extra: Try and incorporate something you learned in the lesson into your CPT Project (0.1)\n",
     "\n",
     "## Hacks Part 3\n",
     "1. Add SASS to Number Guesser Game provided (0.9) or create your own Javascript game/application and add SASS to it (0.9+)\n",
+    "    - I created my own dog journal and added SASS to it. \n",
+    "    ![image](https://user-images.githubusercontent.com/111464920/235040818-001e5845-47d8-41f6-a894-c05380f4d3b7.png)\n",
     "2. We will collectively decide on the \"best\" game/app and award potential seed. \n",
     "\n",
     "# Copy and paste the following code segment into a markdown file which will be used for the hacks:"
