--- a/_notebooks/2023-04-28-Binary-Math-Hacks.ipynb
+++ b/_notebooks/2023-04-28-Binary-Math-Hacks.ipynb
@@ -114,6 +114,9 @@
     "## Binary Logic Hacks\n",
     "\n",
     "### Quiz\n",
+    "\n",
+    "I needed some time to finish the quiz, and I used the notes as a guide. But I now have a good understanding of binary logic.\n",
+    "\n",
     "![image](https://user-images.githubusercontent.com/111464920/235281970-f25437eb-da95-4bc5-a283-f3df098cdf41.png)\n",
     "\n",
     "### Coding Challenge"
@@ -121,18 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'data.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/haeryny/vscode/haehae/_notebooks/2023-04-28-Binary-Math-Hacks.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/vscode/haehae/_notebooks/2023-04-28-Binary-Math-Hacks.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# Read the CSV file and extract the data into a list of integers\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/vscode/haehae/_notebooks/2023-04-28-Binary-Math-Hacks.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m data \u001b[39m=\u001b[39m []\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/vscode/haehae/_notebooks/2023-04-28-Binary-Math-Hacks.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39mdata.csv\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mr\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m files:\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/vscode/haehae/_notebooks/2023-04-28-Binary-Math-Hacks.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m     reader \u001b[39m=\u001b[39m csv\u001b[39m.\u001b[39mreader(files)\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/haeryny/vscode/haehae/_notebooks/2023-04-28-Binary-Math-Hacks.ipynb#W4sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m     \u001b[39mfor\u001b[39;00m row \u001b[39min\u001b[39;00m reader:\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data.csv'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean of original data: 63.4\n",
+      "Mean of updated data: 69.1\n",
+      "Number of odd elements: 328\n"
      ]
     }
    ],
@@ -156,7 +157,7 @@
     "        data[i] = 0\n",
     "        num_odds += 1\n",
     "    elif data[i] % 5 == 0:\n",
-    "        data[i] *= 2\n",
+    "       data[i] *= 2\n",
     "\n",
     "# Calculate the mean of the updated data\n",
     "mean_updated = sum(data) / len(data)\n",
@@ -165,6 +166,161 @@
     "print(\"Mean of original data: \", mean_orig)\n",
     "print(\"Mean of updated data: \", mean_updated)\n",
     "print(\"Number of odd elements: \", num_odds)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logic Gates Hacks\n",
+    "\n",
+    "### Questions\n",
+    "\n",
+    "1. How can logic gates be used to execute basic computer functions?(1-2 sentences)\n",
+    "    - Logic gates can be combined in various ways to perform basic computer functions such as arithmetic, logical operations, and memory storage. These functions are the building blocks of a computer's central processing unit (CPU).\n",
+    "\n",
+    "2. What is the difference between boolean operations and logic gates?(1-2 sentences)\n",
+    "    - Boolean operations are abstract logical operations performed on Boolean values (True or False) that result in another Boolean value. Logic gates, on the other hand, are physical electronic devices that perform Boolean operations on binary signals (0 or 1) and output a binary signal based on the input signal. While boolean operations are a mathematical abstraction, logic gates are physical devices used in electronic circuits to implement boolean operations.\n",
+    "\n",
+    "3. Complete this quiz and correct any mistakes in your blog\n",
+    "    - ![image](https://user-images.githubusercontent.com/111464920/235283000-e0948655-8cd9-4f3c-a897-b1704f5ceab2.png)\n",
+    "    - I got the first one wrong which is this one. I misread the question because I thought it was talking about AND and not OR.\n",
+    "    - ![image](https://user-images.githubusercontent.com/111464920/235283181-0da47784-5e8e-42ad-bd9e-61a1faae3fdc.png)\n",
+    "    "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fetching Hacks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ id: 2, name: 'Bob', age: 32 }, { id: 4, name: 'David', age: 45 }\n"
+     ]
+    }
+   ],
+   "source": [
+    "const data = [\n",
+    "  { id: 1, name: 'Alice', age: 27 },\n",
+    "  { id: 2, name: 'Bob', age: 32 },\n",
+    "  { id: 3, name: 'Charlie', age: 21 },\n",
+    "  { id: 4, name: 'David', age: 45 }\n",
+    "];\n",
+    "\n",
+    "// Filter data based on age greater than 30\n",
+    "const filteredData = data.filter((item) => {\n",
+    "  return item.age > 30;\n",
+    "});\n",
+    "\n",
+    "console.log(filteredData);\n",
+    "// Output: [{ id: 2, name: 'Bob', age: 32 }, { id: 4, name: 'David', age: 45 }]\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Github Pages Hacks\n",
+    "\n",
+    "1. Github pages is a hosting service website. Search up another hosting service website other than Github's and write at least one benefit, advantage, or feature at is different from other hosting service websites.\n",
+    "    - One hosting service website that is different from GitHub Pages is Netlify. Netlify is a platform that provides continuous deployment and hosting services for web projects. One of the main advantages of Netlify is that it offers a powerful and flexible build system that allows developers to build, test, and deploy their projects automatically. Netlify also provides features such as forms handling, identity management, and serverless functions, which allow developers to build and deploy dynamic web applications without the need for a separate backend server. Additionally, Netlify provides a global content delivery network (CDN) and SSL encryption by default, ensuring that web applications hosted on the platform are fast, secure, and highly available."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## APIs Hacks\n",
+    "\n",
+    "Take this python table and use a minimum of 3 pandas functions to analyze the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Name  Age Gender Grade\n",
+      "0  Dillon   24      M     A\n",
+      "1    Noor   31      M     B\n",
+      "2  Steven   42      M     A\n",
+      "3   Lucas   27      M     D\n",
+      "4  Harsha   29      F     C\n",
+      "5  Varalu   26      F     F\n",
+      "6    Ryan   90      F     B\n",
+      "7   Emaad   15      F     A\n",
+      "             Age\n",
+      "count   8.000000\n",
+      "mean   35.500000\n",
+      "std    23.268618\n",
+      "min    15.000000\n",
+      "25%    25.500000\n",
+      "50%    28.000000\n",
+      "75%    33.750000\n",
+      "max    90.000000\n",
+      "         Age\n",
+      "Gender      \n",
+      "F       40.0\n",
+      "M       31.0\n",
+      "A    3\n",
+      "B    2\n",
+      "D    1\n",
+      "C    1\n",
+      "F    1\n",
+      "Name: Grade, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data = {\n",
+    "    'Name': ['Dillon', 'Noor', 'Steven', 'Lucas', 'Harsha', 'Varalu', 'Ryan', 'Emaad'],\n",
+    "    'Age': [24, 31, 42, 27, 29, 26, 90, 15],\n",
+    "    'Gender': ['M', 'M', 'M', 'M', 'F', 'F', 'F', 'F'],\n",
+    "    'Grade': ['A', 'B', 'A', 'D', 'C', 'F', 'B', 'A']\n",
+    "}\n",
+    "df = pd.DataFrame(data)\n",
+    "print(df)\n",
+    "\n",
+    "print(df.describe())\n",
+    "\n",
+    "print(df.groupby('Gender').mean())\n",
+    "\n",
+    "print(df['Grade'].value_counts())\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Compression Hacks\n",
+    "\n",
+    "Lossless compression algorithms typically work by finding patterns in the data and representing them with shorter codes, while ensuring that the compressed data can be perfectly reconstructed back to its original form. Examples of lossless compression algorithms include Huffman coding, Lempel-Ziv-Welch (LZW) compression, and DEFLATE.\n",
+    "\n",
+    "On the other hand, lossy compression algorithms work by permanently discarding some data that is deemed less important or less noticeable to the human eye. This allows for a higher compression ratio, but the reconstructed data will not be exactly the same as the original data. Lossy compression is often used for media files such as images, audio, and video, where small visual or auditory imperfections are generally acceptable. Examples of lossy compression algorithms include JPEG, MP3, and MPEG."
    ]
   }
  ],
