--- a/_notebooks/2023-05-15-DS-sorting.ipynb
+++ b/_notebooks/2023-05-15-DS-sorting.ipynb
@@ -161,9 +161,13 @@
     "\n",
     "- When should you use each algorithm? What makes an algorithm the right choice?\n",
     "- Given the following lists...\n",
-    "    - [0, 2, 6, 4, 8, 10]\n",
+    "    - [0, 2, 6, 4, 8, 10] \n",
+    "        - Insertion, you compare two values at a time because only two numbers have to be switched.\n",
     "    - [Elephant, Banana, Cat, Dog, Apple]\n",
+    "        - Selection, you compare one value with all the other values and all the words have to be reversed in the list.\n",
     "    - [29, 13, 83, 47, 32, 78, 100, 60, 65, 15, 24, 9, 40, 68, 53, 8, 90, 58, 39, 32, 34, 91, 74, 94, 49, 87, 34, 87, 23, 17, 27, 2, 38, 58, 84, 15, 9, 46, 74, 40, 44, 8, 55, 28, 81, 92, 81, 88, 53, 38, 19, 21, 9, 54, 21, 67, 3, 41, 3, 74, 13, 71, 70, 45, 5, 36, 80, 64, 97, 86, 73, 74, 94, 79, 49, 32, 20, 68, 64, 69, 1, 77, 31, 56, 100, 80, 48, 75, 85, 93, 67, 57, 26, 56, 43, 53, 59, 28, 67, 50]\n",
+    "        - Merge, you can view large groups of value at a time.\n",
+    "\n",
     "Select the algorithm you believe is best for each, explain."
    ]
   },
@@ -179,7 +183,9 @@
     "\n",
     "- Run code and then research and answer these questions...\n",
     "    - Is a list and/or dictionary in python considered a primitive or collection type?  Why?\n",
+    "        > \n",
     "    - Is the list passed into bubble sort \"pass-by-value\" or \"pass-by-reference? Describe why in relation to output.\n",
+    "        > \n",
     "\n",
     "- Implement new cell(s) and/or organize cells to do the following.\n",
     "    - Create your own list\n",
@@ -194,9 +200,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original\n",
+      "[{'name': 'Risa', 'age': 18, 'city': 'New York'}, {'name': 'John', 'age': 63, 'city': 'Eugene'}, {'name': 'Shekar', 'age': 18, 'city': 'San Francisco'}, {'name': 'Ryan', 'age': 21, 'city': 'Los Angeles'}]\n",
+      "name\n",
+      "[{'name': 'John', 'age': 63, 'city': 'Eugene'}, {'name': 'Risa', 'age': 18, 'city': 'New York'}, {'name': 'Ryan', 'age': 21, 'city': 'Los Angeles'}, {'name': 'Shekar', 'age': 18, 'city': 'San Francisco'}]\n",
+      "age\n",
+      "[{'name': 'Risa', 'age': 18, 'city': 'New York'}, {'name': 'Shekar', 'age': 18, 'city': 'San Francisco'}, {'name': 'Ryan', 'age': 21, 'city': 'Los Angeles'}, {'name': 'John', 'age': 63, 'city': 'Eugene'}]\n",
+      "city\n",
+      "[{'name': 'John', 'age': 63, 'city': 'Eugene'}, {'name': 'Ryan', 'age': 21, 'city': 'Los Angeles'}, {'name': 'Risa', 'age': 18, 'city': 'New York'}, {'name': 'Shekar', 'age': 18, 'city': 'San Francisco'}]\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "* Creator: Nighthawk Coding Society\n",
