--- a/_notebooks/2023-05-16-DS-arrays_lab.ipynb
+++ b/_notebooks/2023-05-16-DS-arrays_lab.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -675,10 +675,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "░░▄███▄███▄░░░░░░░░░░░░\n",
+      "░░█████████░░░░░░░░░░░░\n",
+      "░░▒▀█████▀░░░░░░░░░░░░░\n",
+      "░░▒░░▀█▀░░░░░░░░░░░░░░░\n",
+      "░░▒░░█░░░░░░░░░░░░░░░░░\n",
+      "░░▒░█░░░░░░░░░░░░░░░░░░\n",
+      "░░░█░░░░░░░░░░░░░░░░░░░\n",
+      "░░█░░░░███████░░░░░░░░░\n",
+      "░██░░░██▓▓███▓██▒░░░░░░\n",
+      "██░░░█▓▓▓▓▓▓▓█▓████░░░░\n",
+      "██░░██▓▓▓▓^▓▓▓█▓█▓█░░░░\n",
+      "███▓▓▓█▓▓▓▓▓█▓█▓▓▓▓█░░░\n",
+      "▀██▓▓█░██▓▓▓▓██▓▓▓▓▓█░░\n",
+      "░▀██▀░░█▓▓▓▓▓▓▓▓▓▓▓▓▓█░\n",
+      "░░░░▒░░░█▓▓▓▓▓█▓▓▓▓▓▓█░\n",
+      "░░░░▒░░░█▓▓▓▓█▓█▓▓▓▓▓█░\n",
+      "░▒░░▒░░░█▓▓▓█▓▓▓█▓▓▓▓█░\n",
+      "░▒░░▒░░░█▓▓▓█░░░█▓▓▓█░░\n",
+      "░▒░░▒░░██▓██░░░██▓▓██░░\n",
+      "████████████████████████\n",
+      "▀██▀─▄███▄─▀██─██▀██▀▀█\n",
+      "─██─███─███─██─██─██▄█\n",
+      "─██─▀██▄██▀─▀█▄█▀─██▀█\n",
+      "▄██▄▄█▀▀▀─────▀──▄██▄▄█\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"░░▄███▄███▄░░░░░░░░░░░░\")\n",
+    "print(\"░░█████████░░░░░░░░░░░░\")\n",
+    "print(\"░░▒▀█████▀░░░░░░░░░░░░░\")\n",
+    "print(\"░░▒░░▀█▀░░░░░░░░░░░░░░░\")\n",
+    "print(\"░░▒░░█░░░░░░░░░░░░░░░░░\")\n",
+    "print(\"░░▒░█░░░░░░░░░░░░░░░░░░\")\n",
+    "print(\"░░░█░░░░░░░░░░░░░░░░░░░\")\n",
+    "print(\"░░█░░░░███████░░░░░░░░░\")\n",
+    "print(\"░██░░░██▓▓███▓██▒░░░░░░\")\n",
+    "print(\"██░░░█▓▓▓▓▓▓▓█▓████░░░░\")\n",
+    "print(\"██░░██▓▓▓▓^▓▓▓█▓█▓█░░░░\")\n",
+    "print(\"███▓▓▓█▓▓▓▓▓█▓█▓▓▓▓█░░░\")\n",
+    "print(\"▀██▓▓█░██▓▓▓▓██▓▓▓▓▓█░░\")\n",
+    "print(\"░▀██▀░░█▓▓▓▓▓▓▓▓▓▓▓▓▓█░\")\n",
+    "print(\"░░░░▒░░░█▓▓▓▓▓█▓▓▓▓▓▓█░\")\n",
+    "print(\"░░░░▒░░░█▓▓▓▓█▓█▓▓▓▓▓█░\")\n",
+    "print(\"░▒░░▒░░░█▓▓▓█▓▓▓█▓▓▓▓█░\")\n",
+    "print(\"░▒░░▒░░░█▓▓▓█░░░█▓▓▓█░░\")\n",
+    "print(\"░▒░░▒░░██▓██░░░██▓▓██░░\")\n",
+    "print(\"████████████████████████\")\n",
+    "print(\"▀██▀─▄███▄─▀██─██▀██▀▀█\")\n",
+    "print(\"─██─███─███─██─██─██▄█\")\n",
+    "print(\"─██─▀██▄██▀─▀█▄█▀─██▀█\")\n",
+    "print(\"▄██▄▄█▀▀▀─────▀──▄██▄▄█\")\n"
+   ]
   }
  ],
  "metadata": {
