--- a/_notebooks/2023-05-15-DS-sorting.ipynb
+++ b/_notebooks/2023-05-15-DS-sorting.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,6 @@
     "         \n",
     "        if not swapped:  # if no swaps on inner pass, list is sorted\n",
     "            return  # exit function\n",
-    "    \n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    # list/dictionary sample\n",
@@ -265,6 +264,145 @@
     "    for key in key_row:  # finds each key in the row\n",
     "        print(key)\n",
     "        bubbleSort(list_of_people, key)  # sort list of people\n",
+    "        print(list_of_people)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "My Own List and Merge Sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original\n",
+      "[{'name': 'Bob Ross', 'age': 895, 'country': 'Italy'}, {'name': 'Leonardo Da Vinci', 'age': 653, 'country': 'America'}, {'name': 'Van Gogh', 'age': 485, 'country': 'France'}, {'name': 'Picasso', 'age': 212, 'country': 'Rome'}]\n",
+      "Bubble Sort\n",
+      "name\n",
+      "[{'name': 'Bob Ross', 'age': 895, 'country': 'Italy'}, {'name': 'Leonardo Da Vinci', 'age': 653, 'country': 'America'}, {'name': 'Picasso', 'age': 212, 'country': 'Rome'}, {'name': 'Van Gogh', 'age': 485, 'country': 'France'}]\n",
+      "age\n",
+      "[{'name': 'Picasso', 'age': 212, 'country': 'Rome'}, {'name': 'Van Gogh', 'age': 485, 'country': 'France'}, {'name': 'Leonardo Da Vinci', 'age': 653, 'country': 'America'}, {'name': 'Bob Ross', 'age': 895, 'country': 'Italy'}]\n",
+      "country\n",
+      "[{'name': 'Leonardo Da Vinci', 'age': 653, 'country': 'America'}, {'name': 'Van Gogh', 'age': 485, 'country': 'France'}, {'name': 'Bob Ross', 'age': 895, 'country': 'Italy'}, {'name': 'Picasso', 'age': 212, 'country': 'Rome'}]\n",
+      "Merge Sort\n",
+      "name\n",
+      "[{'name': 'Bob Ross', 'age': 895, 'country': 'Italy'}, {'name': 'Leonardo Da Vinci', 'age': 653, 'country': 'America'}, {'name': 'Picasso', 'age': 212, 'country': 'Rome'}, {'name': 'Van Gogh', 'age': 485, 'country': 'France'}]\n",
+      "age\n",
+      "[{'name': 'Picasso', 'age': 212, 'country': 'Rome'}, {'name': 'Van Gogh', 'age': 485, 'country': 'France'}, {'name': 'Leonardo Da Vinci', 'age': 653, 'country': 'America'}, {'name': 'Bob Ross', 'age': 895, 'country': 'Italy'}]\n",
+      "country\n",
+      "[{'name': 'Leonardo Da Vinci', 'age': 653, 'country': 'America'}, {'name': 'Van Gogh', 'age': 485, 'country': 'France'}, {'name': 'Bob Ross', 'age': 895, 'country': 'Italy'}, {'name': 'Picasso', 'age': 212, 'country': 'Rome'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Merge sort algorithm\n",
+    "def mergeSort(arr):\n",
+    "    if len(arr) <= 1:\n",
+    "        return arr\n",
+    "\n",
+    "    mid = len(arr) // 2\n",
+    "    left_half = arr[:mid]\n",
+    "    right_half = arr[mid:]\n",
+    "\n",
+    "    left_half = mergeSort(left_half)\n",
+    "    right_half = mergeSort(right_half)\n",
+    "\n",
+    "    return merge(left_half, right_half)\n",
+    "\n",
+    "def merge(left, right):\n",
+    "    result = []\n",
+    "    i = j = 0\n",
+    "\n",
+    "    while i < len(left) and j < len(right):\n",
+    "        if left[i] <= right[j]:\n",
+    "            result.append(left[i])\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            result.append(right[j])\n",
+    "            j += 1\n",
+    "\n",
+    "    result.extend(left[i:])\n",
+    "    result.extend(right[j:])\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    # my own list\n",
+    "    list_of_artists = [\n",
+    "    {\"name\": \"Bob Ross\", \"age\": 895, \"country\": \"Italy\"},\n",
+    "    {\"name\": \"Leonardo Da Vinci\", \"age\": 653, \"country\": \"America\"},\n",
+    "    {\"name\": \"Van Gogh\", \"age\": 485, \"country\": \"France\"},\n",
+    "    {\"name\": \"Picasso\", \"age\": 212, \"country\": \"Rome\"}\n",
+    "    ]\n",
+    "    \n",
+    "    key_row = list_of_artists[0]\n",
+    "\n",
+    "    \n",
+    "    # print list as defined\n",
+    "    print(\"Original\")\n",
+    "    print(list_of_artists)\n",
+    "\n",
+    "    print(\"Bubble Sort\")\n",
+    "    for key in key_row:  # finds each key in the row\n",
+    "        print(key)\n",
+    "        bubbleSort(list_of_artists, key)  # sort list of people\n",
+    "        print(list_of_artists)\n",
+    "\n",
+    "    print(\"Merge Sort\")\n",
+    "    for key in key_row:  # finds each key in the row\n",
+    "        print(key)\n",
+    "        mergeSort(list_of_artists, key)  # sort list of people\n",
+    "        print(list_of_artists)\n",
+    "\n",
+    "  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Merge Sort on Class Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original\n",
+      "[{'name': 'Risa', 'age': 18, 'city': 'New York'}, {'name': 'John', 'age': 63, 'city': 'Eugene'}, {'name': 'Shekar', 'age': 18, 'city': 'San Francisco'}, {'name': 'Ryan', 'age': 21, 'city': 'Los Angeles'}]\n",
+      "name\n",
+      "[{'name': 'John', 'age': 63, 'city': 'Eugene'}, {'name': 'Risa', 'age': 18, 'city': 'New York'}, {'name': 'Ryan', 'age': 21, 'city': 'Los Angeles'}, {'name': 'Shekar', 'age': 18, 'city': 'San Francisco'}]\n",
+      "age\n",
+      "[{'name': 'Risa', 'age': 18, 'city': 'New York'}, {'name': 'Shekar', 'age': 18, 'city': 'San Francisco'}, {'name': 'Ryan', 'age': 21, 'city': 'Los Angeles'}, {'name': 'John', 'age': 63, 'city': 'Eugene'}]\n",
+      "city\n",
+      "[{'name': 'John', 'age': 63, 'city': 'Eugene'}, {'name': 'Ryan', 'age': 21, 'city': 'Los Angeles'}, {'name': 'Risa', 'age': 18, 'city': 'New York'}, {'name': 'Shekar', 'age': 18, 'city': 'San Francisco'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print list as defined\n",
+    "print(\"Original\")\n",
+    "print(list_of_people)\n",
+    "    \n",
+    "for key in key_row:  # finds each key in the row\n",
+    "        print(key)\n",
+    "        mergeSort(list_of_people, key)  # sort list of people\n",
     "        print(list_of_people)"
    ]
   }
