--- a/_notebooks/2023-05-15-DS-sorting.ipynb
+++ b/_notebooks/2023-05-15-DS-sorting.ipynb
@@ -156,6 +156,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Popcorn Hacks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words = new_words()\n",
+    "print(words)\n",
+    "def bubbleSort(list):\n",
+    "    n = len(list) - 1  # list are indexed 0 to n-1, len is n\n",
+    "    \n",
+    "    # Traverse through list with i index\n",
+    "    for i in range(n):\n",
+    "        swapped = False  # optimize code, so it exits if now swaps on inner loop\n",
+    "\n",
+    "        # Inner traversal using j index\n",
+    "        for j in range(n-i):  # n-i as positions on right are in order in bubble\n",
+    " \n",
+    "            # Swap if the element KeyN is greater KeyN1\n",
+    "            keyN = list[j]\n",
+    "            keyN1 = list[j+1]\n",
+    "            if keyN > keyN1:\n",
+    "                swapped = True\n",
+    "                list[j], list[j + 1] = list[j + 1], list[j]  # single line swap\n",
+    "         \n",
+    "        if not swapped:  # if no swaps on inner pass, list is sorted\n",
+    "            return  # exit function\n",
+    "        \n",
+    "bubbleSort(words)\n",
+    "print(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words = new_words()\n",
+    "print(words)\n",
+    "def selectionSort(list):\n",
+    "    n = len(list)  # length is n\n",
+    "    \n",
+    "    # List is traversed from index 0 to n-1, n elements\n",
+    "    for i in range(n):\n",
+    "        smallI = i  # small index is captured\n",
+    "        smallV = list[i]\n",
+    "\n",
+    "        # Inner traversal looks at elements after i\n",
+    "        for j in range(i+1, n):\n",
+    "            # Save reference if less\n",
+    "            keyV = list[j]\n",
+    "            if keyV < smallV:\n",
+    "                smallI = j  # small index is replaced\n",
+    "                smallV = keyV\n",
+    "        \n",
+    "        # swap smallest to current i positon, sorting left to right\n",
+    "        list[i], list[smallI] = list[smallI], list[i]  # single line swap \n",
+    "        \n",
+    "selectionSort(words)\n",
+    "print(words)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Discuss \n",
     "Answer the following with your group.\n",
     "\n",
